Bugfix to connect with h2 and oracle to same time.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ target/
 .idea/compiler.xml
 .idea/misc.xml
 .idea/libraries/
+.idea/encodings.xml
+.idea/runConfigurations.xml
 *.iws
 *.iml
 *.ipr
