--- a/src/main/java/main/datas-enum.properties
+++ b/src/main/java/main/datas-enum.properties
@@ -1,6 +1,6 @@
 # typeProperty (0=String, 1=Long)
 # tableName=keyName=valueFromColumnName:typeProperty,valueFromColumnName2:typeProperty
-TB_UNIDADE_FEDERATIVA=DS_UNIDADE=CD_IBGE:1,DS_UNIDADE:0
-TB_SEMANA=DS_SEMANA=CD_DIA_SEMANA:1,DS_SEMANA:0,SG_SEMANA:0
+TB_AMERICAS_COUNTRIES=DES_COUNTRY=ID:1,DES_COUNTRY:0
+TB_WEEK=DES_WEEK=COD_DAY:1,DES_WEEK:0,COD_WEEK:0
 
 
